--- a/lib/index.html
+++ b/lib/index.html
@@ -73,7 +73,7 @@
 									<input type="radio" id="Enable_Location" name="radio" value="places" /><label for="Enable_Location">Location</label>
 									<input type="radio" id="Enable_Application" name="radio" value="application" /><label for="Enable_Application">Application</label>
 									<input type="radio" id="Enable_Browsing" name="radio" value="web" /><label for="Enable_Browsing">Websites</label>
-									<input type="radio" id="Enable_Messaging" name="radio" value="calendar" /><label for="Enable_Messaging">Calendar</label>
+									<input type="radio" id="Enable_Messaging" name="radio" value="messaging" /><label for="Enable_Messaging">Messaging</label>
 									<input type="radio" id="Enable_Phone" name="radio" value="phone" /><label for="Enable_Phone">Voice Call</label>
 							</form>
 							</div>							
